--- a/pc_shenzhouchangxing.html
+++ b/pc_shenzhouchangxing.html
@@ -110,7 +110,7 @@
 <script>
     $(function () {
 
-        var url=url_area;
+        var url=url_area+"/0";
 
         $.get(url,function (result) {
             var html="<option value=\"\">请选择</option>";
